Principal.html novo
modifiquei as cores, estilo de fonte pagina do menu e etc...

--- a/Principal.html
+++ b/Principal.html
@@ -5,14 +5,20 @@
     <link rel="stylesheet" href="Principal.css">
 </head>
 <body>
-    <div id="dmenu">
-        <p>Esportes</p>
-    </div>
-    <h1>IF BET</h1>
+    <ul id="menu">
+        <li><a href="#"><h3>IFBET</h3></a></li>
+        <li><a href="#"><H3>Esportes</H3></a></li>
+        <li><a href="#"><h3>Ao-vivo</h3></a></li>
+        <li ><a href="#"><h3>Esportes Virtuais</h3></a></li>
+        <li style="float:right"><a href="#"><h3>CONTATO</h3></a></li>
+        <li style="float:right"><a href="Cadastro.html"><h3>Registre-se</h3> </a></li>
+    </ul>
+ 
+
     <div id="di">
-        <h3>Popular</h3>
+        <h3 style="color: rgba(37, 179, 101, 0.925);">Popular</h3>
             <p>
-                Copa do Brasil
+                Copa do Brasil 
             </p>
             <p>
                 Série A
@@ -20,7 +26,7 @@
             <p>
                 Série B
             </p>
-        <h3>Lista Completa</h3>
+        <h3 style="color: rgba(37, 179, 101, 0.925);">Lista Completa</h3>
             <p>
                 Basquete
             </p>
@@ -81,12 +87,7 @@
             <p>
                 Voleibol
             </p>
-    </div> <!-- Menu -->
-    <div id="dii">
-        <p>
-            dshkhahgdsgadhs
-        </p>
-    </div>
-    <img src="https://img.freepik.com/fotos-premium/dia-internacional-do-esporte-6-de-abril_10221-18936.jpg" alt="Esportes" width="1200px" height="800px">
+    </div> 
+
 </body>
 </html>
