--- a/Principal.html
+++ b/Principal.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>IFBET</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="Principal.css">
 </head>
 <body>
     <ul id="menu">
         <li><a href="#"><h3>IFBET</h3></a></li>
         <li><a href="#"><H3>Esportes</H3></a></li>
-        <li><a href="#"><h3>Ao-vivo</h3></a></li>
+        <li><a href="#"><h3>Ao-vivo</h3></a></li>s
         <li ><a href="#"><h3>Esportes Virtuais</h3></a></li>
         <li style="float:right"><a href="#"><h3>CONTATO</h3></a></li>
         <li style="float:right"><a href="Cadastro.html"><h3>Registre-se</h3> </a></li>
     </ul>
+    <div class="imag">
+        <img src="site img.png" alt="" width="1297px" height="210px" >
+    </div>
+ 
+    
+ 
  
 
     <div id="di">
@@ -87,7 +95,7 @@
             <p>
                 Voleibol
             </p>
-    </div> 
+    
 
 </body>
 </html>
