Criação de div de confrontos
Foi criado caixas e confrontos usando principalmente as tags <div>

--- a/cadastro.html
+++ b/cadastro.html
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="dados">
-                    <a href="https://wipsites.com.br/"><button>Cadastra-se na IFBET</button></a>
+                    <button><a href="Principal.html">Cadastra-se na IFBET</a></button>>
                 </div>
 
             </form>
