--- a/cadastro.html
+++ b/cadastro.html
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="dados">
-                    <button><a href="Principal.html">Cadastra-se na IFBET</a></button>>
+                    <button><a href="Principal.html">Cadastra-se na IFBET</a></button>
                 </div>
 
             </form>
