--- a/cadastro.html
+++ b/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <link rel="stylesheet" href="Cadastro.css">
@@ -7,8 +7,6 @@
 </head>
 
 <body>
-
-    
         <div class="formulario">
             <h2>Criar Conta</h2>
             
