Mudanças no formulário e melhora na logo
Foi feita a atividade da unidade 2 parte 1 onde foi implementado um arquivo javascript que alterou o formulário usando os métodos: mouseover, mouseout, onfocus e onblur

--- a/aovivo.html
+++ b/aovivo.html
@@ -7,12 +7,12 @@
 <body>
     <!-- Menu Superior -->
     <ul id="menu">
-        <li><a href="Principal.html"><h3>IFBET</h3></a></li>
-        <li><a href="#"><H3>Esportes</H3></a></li>
-        <li><a href="aovivo.html"><h3>Ao-vivo</h3></a></li>
-        <li ><a href="#"><h3>Esportes Virtuais</h3></a></li>
-        <li style="float:right"><a href="#"><h3>CONTATO</h3></a></li>
-        <li style="float:right"><a href="Cadastro.html"><h3>Registre-se</h3> </a></li>
+        <li class="destacado"><a href="Principal.html"><img src="imagens/Logo.jpg" alt="Logo" width="125px"></a></li>
+        <li class="menu-item"><a href="#"><p>Esportes</p></a></li>
+        <li class="menu-item"><a href="aovivo.html"><p>Ao-vivo</p></a></li>
+        <li class="menu-item"><a href="#"><p>Esportes Virtuais</p></a></li>
+        <li class="menu-item" style="float:right"><a href="#"><p>CONTATO</p></a></li>
+        <li class="menu-item" style="float:right"><a href="Cadastro.html"><p>Registre-se</p> </a></li>
     </ul>
             
             <h1 style="margin: 20px;">Jogos Ao Vivo</h1>
