Correção de cores e outras coisas
Nesse commit foi realizado a correção de cores e pequenos detalhes da tela de cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -48,7 +48,7 @@
                 </div>
 
                 <div class="dados">
-                    <button id="btnCadastro" onmouseover="mudarBtn();" onmouseout="voltarBtn();"><a href="Principal.html">Cadastra-se na IFBET</a></button>
+                    <button id="btnCadastro" onmouseover="mudarBtn();" onmouseout="voltarBtn();"><a id="nomebtn" href="Principal.html">Cadastra-se na IFBET</a></button>
                 </div>
 
             </form>
