--- a/cadastro.html
+++ b/cadastro.html
@@ -15,17 +15,21 @@
             <form>
                 <div class="dados">
                     <label for="nome" id="nome"> Nome Completo</label>
-                    <input type="text" id="nome" placeholder="Digite o seu nome completo" onfocus="mudarElemento('nome');" onblur="voltarElemento('nome');">
+                    <input type="text" id="nome" placeholder="Digite o seu nome completo" onfocus="mudarElemento('nome');" onblur="voltarElemento('nome');" >
+                    
                 </div>
 
                 <div class="dados">
                     <label for="email" id="email">E-mail</label>
-                    <input type="email" id="email" placeholder="Digite o seu email" onfocus="mudarElemento('email');" onblur="voltarElemento('email');">
+                    <input type="email" id="emailInput" oninput="validarEmail()" placeholder="Digite o seu email" onfocus="mudarElemento('email');" onblur="voltarElemento('email');">
+                    <p id="resultado"></p>
 
                 <div class="dados">
                     <label for ="cpf" id="cpf"> CPF</label>
-                    <input type="text" id="cpf" placeholder="Digite seu numero de CPF" onfocus="mudarElemento('cpf');" onblur="voltarElemento('cpf');">
+                    <input type="text" id="cpfInput" oninput="validarCPF()" placeholder="Digite seu numero de CPF"  onfocus="mudarElemento('cpf');" onblur="voltarElemento('cpf');">
+                    <p id="resultadocpf"></p>
                 </div>
+                
 
                 <div class="dados">
                     <label for ="data de nascimento" id="data"> Data de nascimento</label>
