--- a/cadastro.html
+++ b/cadastro.html
@@ -3,12 +3,17 @@
 
 <head>
     <link rel="stylesheet" href="Cadastro.css">
+    <link rel="shortcut icon" href="imagens/Logo.jpg" type="image/x-icon">
     <title>Cadastro if bet</title>
 </head>
 
 <body>
+    <video autoplay muted loop id="myVideo">
+        <source src="imagens/VídeoCadastro.mp4">
+    </video>
+    
         <div class="formulario">
-            <h2>Criar Conta</h2>
+            <h2 style="color: rgba(25, 186, 10, 0.989);">Criar Conta</h2>
 
             <script src="cadastro.js"></script>
             
