Criação da página Game
Nessa parte do trabalho, foi recriado o jogo Mines, um jogo de apostas que imita o jogo campo minado, porém contando somente com a sorte, essa nossa versão foi criada usando somente HTML, CSS e JavaScript

--- a/aovivo.html
+++ b/aovivo.html
@@ -10,7 +10,7 @@
         <li class="destacado"><a href="Principal.html"><img src="imagens/Logo.jpg" alt="Logo" width="125px"></a></li>
         <li class="menu-item"><a href="#"><p>Esportes</p></a></li>
         <li class="menu-item"><a href="aovivo.html"><p>Ao-vivo</p></a></li>
-        <li class="menu-item"><a href="#"><p>Esportes Virtuais</p></a></li>
+        <li class="menu-item"><a href="mines.html"><p>Game</p></a></li>
         <li class="menu-item" style="float:right"><a href="#"><p>CONTATO</p></a></li>
         <li class="menu-item" style="float:right"><a href="Cadastro.html"><p>Registre-se</p> </a></li>
     </ul>
