--- a/cadastro.html
+++ b/cadastro.html
@@ -13,7 +13,7 @@
     </video>
     
         <div class="formulario">
-            <h2 style="color: rgba(25, 186, 10, 0.989);">Criar Conta</h2>
+            <h2 style="color: rgb(32, 138, 67); margin-top: 10px;">Criar Conta</h2>
 
             <script src="cadastro.js"></script>
             
