--- a/Principal.html
+++ b/Principal.html
@@ -79,7 +79,7 @@ title: 'Bom jogo!!!',
         <li class="destacado"><a href="Principal.html"><img src="imagens/Logo.jpg" alt="Logo" width="125px"></a></li>
         <li class="menu-item"><a href="#"><p>Esportes</p></a></li>
         <li class="menu-item"><a href="aovivo.html"><p>Ao-vivo</p></a></li>
-        <li class="menu-item"><a href="#"><p>Esportes Virtuais</p></a></li>
+        <li class="menu-item"><a href="mines.html"><p>Game</p></a></li>
         <li class="menu-item" style="float:right"><a href="Sobre.html"><p>Sobre</p></a></li>
         <li class="menu-item" style="float:right"><a href="Cadastro.html"><p>Registre-se</p> </a></li>
     </ul>
