Melhoria no design, versão 4.0
Nessa etapa do código foi melhorado o design do jogo minis e alguns designers internos que estavam desconfigurados.

--- a/Principal.html
+++ b/Principal.html
@@ -93,7 +93,7 @@ title: 'Bom jogo!!!',
                 <li><a href="#section2">Brasileirão Série A</a></li>
                 <li><a href="#section3">Brasileirão Série B</a></li>
                 <li><h1 class="title">Esportes</h1></li>
-                <li><a href="#section4">Jogos Ao Vivo</a></li>
+                <li><a href="aovivo.html">Jogos Ao Vivo</a></li>
                 <li><a href="#section5">Tabela de Apostas</a></li>
                 <li><a href="#section6">Rodapé</a></li>
             </ul>
