--- a/aovivo.html
+++ b/aovivo.html
@@ -3,6 +3,7 @@
 <head>
     <title>IFBET</title>
     <link rel="stylesheet" href="Principal.css">
+    <link rel="shortcut icon" href="imagens/Logo.jpg" type="image/x-icon">
 </head>
 <body>
     <!-- Menu Superior -->
@@ -11,7 +12,7 @@
         <li class="menu-item"><a href="#"><p>Esportes</p></a></li>
         <li class="menu-item"><a href="aovivo.html"><p>Ao-vivo</p></a></li>
         <li class="menu-item"><a href="mines.html"><p>Game</p></a></li>
-        <li class="menu-item" style="float:right"><a href="#"><p>CONTATO</p></a></li>
+        <li class="menu-item" style="float:right"><a href="Sobre.html"><p>Sobre</p></a></li>
         <li class="menu-item" style="float:right"><a href="Cadastro.html"><p>Registre-se</p> </a></li>
     </ul>
             
