--- a/mines.html
+++ b/mines.html
@@ -3,9 +3,33 @@
 <head>
     <link rel="stylesheet" href="mines.css">
     <link rel="stylesheet" href="Principal.css">
+    <link rel="shortcut icon" href="imagens/Logo.jpg" type="image/x-icon">
     <title>Mines Game</title>
+
+<!-- Imagen de fundo -->
+    <style>
+        body {
+            position: relative;
+        }
+
+        #imagem-fundo {
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1; 
+            width: 100%;
+            height: 90%;
+            opacity: 0.5; 
+            background-image: url('imagens/Fundo\ Mines.jpg');
+            background-size: 98% 100%;
+
+        }
+    </style>
 </head>
 <body>
+    
+    <div id="imagem-fundo"></div>
+
     <!-- Menu Superior -->
     <ul id="menu">
         <li class="destacado"><a href="Principal.html"><img src="imagens/Logo.jpg" alt="Logo" width="125px"></a></li>
